--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -1,7 +1,7 @@
 ﻿<html manifest=node.manifest>
 <head>
   <meta charset="utf-8">
-  <title>GIDE</title>
+  <title>极客虫(GIDE)</title>
   <script type="text/javascript" src="../../blockly_compressed.js"></script>
   <script type="text/javascript" src="../../core/variables.js"></script>
   <script type="text/javascript" src="../../core/blockly.js"></script>
@@ -279,7 +279,10 @@ function init() {
 			  <span id="copyright" style="font-family:arial;font-size:12px;color:#999;">copyright</span>
             </td>
 			<td class="tabmin">
-			  <input onclick="Blockly.mainWorkspace.undo(0);" name="undo" type="image" title="undo(ctrl+z)"  src="media/undo.png" style="padding:5px;" onmouseover="this.src='media/undo1.png'" onmousedown="this.src='media/undo2.png'" onmouseup="this.src='media/undo1.png'" onmouseout="this.src='media/undo.png'" width="20" height="20" border="0">
+			  <input onclick="Blockly.mainWorkspace.undo(0);" name="undo" type="image" title="undo(ctrl+z)"  src="media/download.png" style="padding:5px;" onmouseover="this.src='media/download1.png'" onmousedown="this.src='media/download2.png'" onmouseup="this.src='media/download1.png'" onmouseout="this.src='media/download.png'" width="20" height="20" border="0">
+            </td>
+      <td class="tabmin">
+        <input onclick="Blockly.mainWorkspace.undo(0);" name="undo" type="image" title="undo(ctrl+z)"  src="media/undo.png" style="padding:5px;" onmouseover="this.src='media/undo1.png'" onmousedown="this.src='media/undo2.png'" onmouseup="this.src='media/undo1.png'" onmouseout="this.src='media/undo.png'" width="20" height="20" border="0">
             </td>
 			<td class="tabmin" style="padding-right:20px">
 			  <input onclick="Blockly.mainWorkspace.undo(1);" name="redo" type="image" title="redo(ctrl+y)"  src="media/redo.png" style="padding:5px" onmouseover="this.src='media/redo1.png'" onmousedown="this.src='media/redo2.png'" onmouseup="this.src='media/redo1.png'" onmouseout="this.src='media/redo.png'" width="20" height="20" border="0">
