--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -278,8 +278,19 @@ function init() {
             <td class="tabcoyright">
 			  <span id="copyright" style="font-family:arial;font-size:12px;color:#999;">copyright</span>
             </td>
+      <td class="tabmin">
+        <select>
+          <option value="COM1">COM1</option>
+          <option value="COM2">COM2</option>
+          <option value="COM3">COM3</option>
+          <option value="COM4">COM4</option>
+        </select>
+      </td>
+      <td class="tabmin">
+        <input onclick="location.reload();" name="undo" type="image" title="refresh(F5)"  src="media/refresh.png" style="padding:5px;" onmouseover="this.src='media/refresh.png'" onmousedown="this.src='media/refresh.png'" onmouseup="this.src='media/refresh.png'" onmouseout="this.src='media/refresh.png'" width="20" height="20" border="0">
+            </td>
 			<td class="tabmin">
-			  <input onclick="Blockly.mainWorkspace.undo(0);" name="undo" type="image" title="undo(ctrl+z)"  src="media/download.png" style="padding:5px;" onmouseover="this.src='media/download1.png'" onmousedown="this.src='media/download2.png'" onmouseup="this.src='media/download1.png'" onmouseout="this.src='media/download.png'" width="20" height="20" border="0">
+			  <input onclick="location.reload();" name="undo" type="image" title="undo(ctrl+z)"  src="media/download.png" style="padding:5px;" onmouseover="this.src='media/download1.png'" onmousedown="this.src='media/download2.png'" onmouseup="this.src='media/download1.png'" onmouseout="this.src='media/download.png'" width="20" height="20" border="0">
             </td>
       <td class="tabmin">
         <input onclick="Blockly.mainWorkspace.undo(0);" name="undo" type="image" title="undo(ctrl+z)"  src="media/undo.png" style="padding:5px;" onmouseover="this.src='media/undo1.png'" onmousedown="this.src='media/undo2.png'" onmouseup="this.src='media/undo1.png'" onmouseout="this.src='media/undo.png'" width="20" height="20" border="0">
