--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -284,6 +284,7 @@ function init() {
           <option value="COM2">COM2</option>
           <option value="COM3">COM3</option>
           <option value="COM4">COM4</option>
+          <option value="COM5">COM5</option>
         </select>
       </td>
       <td class="tabmin">
