--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -276,13 +276,7 @@ function init() {
             <td class="tabcoyright">
 			  <span id="copyright" style="font-family:arial;font-size:12px;color:#999;">copyright</span>
             </td>
-      <td class="tabmin">
-        <select>
-          <option value="COM1">COM1</option>
-          <option value="COM2">COM2</option>
-          <option value="COM3">COM3</option>
-          <option value="COM4">COM4</option>
-          <option value="COM5">COM5</option>
+      <td class="tabmin"><select id="SerailMenu">
         </select>
       </td>
       <td class="tabmin">
