--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -1221,7 +1221,18 @@ function init() {
 		<block type="factory_block"></block>
 		<block type="factory_block_return"></block>
   </category>
-  
+	<category id="geekinsect" name="geekinsect" colour="65">
+		<block type="factory_include"></block>
+		<block type="factory_function_noreturn"></block>
+		<block type="factory_function_return"></block>
+		<block type="factory_declare"></block>
+        <block type="factory_define"></block>
+		<block type="factory_callMethod_noreturn"></block>
+		<block type="factory_callMethod_return"></block>
+		<block type="factory_static_method_noreturn"></block>
+		<block type="factory_static_method_return"></block>
+		<block type="factory_block"></block>
+		<block type="factory_block_return"></block>
   </xml>
   <script>
 	if(company_block!=null){
