--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -32,7 +32,6 @@
   <script type="text/javascript" src="../../generators/arduino/variables.js"></script>
   <script type="text/javascript" src="../../generators/arduino/procedures.js"></script>
   <script type="text/javascript" src="../../generators/arduino/factory.js"></script>
-  <script type="text/javascript" src="../../generators/arduino/geeinsect.js"></script>
   <script type="text/javascript" src="../../blocks/pins.js"></script>
   <script type="text/javascript" src="../../blocks/inout.js"></script>
   <script type="text/javascript" src="../../blocks/control.js"></script>
@@ -47,7 +46,8 @@
   <script type="text/javascript" src="../../blocks/variables.js"></script>
   <script type="text/javascript" src="../../blocks/procedures.js"></script>
   <script type="text/javascript" src="../../blocks/factory.js"></script>
-  <script type="text/javascript" src="../../blocks/geekinsect.js"></script>
+  <script type="text/javascript" src="../../blocks/company/geekinsect.js"></script>
+  <script type="text/javascript" src="../../generators/arduino/company/geekinsect.js"></script>
   <link rel="stylesheet" type="text/css" href="color.css" />
   <script>
 var sidecodeDisplay=false;
@@ -1223,8 +1223,37 @@ function init() {
 		<block type="factory_block"></block>
 		<block type="factory_block_return"></block>
   </category>
-	<category id="geekinsect" name="极客虫" colour="65">
-		<block type="geekinsect_moto"></block>
+	<category id="geekinsect" name="极客虫" colour="77">
+    <block type="geekinsect_moto">
+      <value name="VALUE1">
+       <shadow type="math_number">
+        <field name="NUM">60</field>
+       </shadow>
+      </value>
+      <value name="VALUE2">
+        <shadow type="math_number">
+         <field name="NUM">60</field>
+        </shadow>
+       </value>
+    </block>
+    <block type="geekinsect_ws2812">
+      <value name="VALUE1">
+       <shadow type="math_number">
+        <field name="NUM">255</field>
+       </shadow>
+      </value>
+      <value name="VALUE2">
+       <shadow type="math_number">
+        <field name="NUM">255</field>
+       </shadow>
+      </value>
+      <value name="VALUE3">
+       <shadow type="math_number">
+        <field name="NUM">255</field>
+       </shadow>
+      </value>
+     </block>
+     <block type="geekinsect_xeopixel"></block>
   </xml>
   <script>
 	if(company_block!=null){
