--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -46,8 +46,8 @@
   <script type="text/javascript" src="../../blocks/variables.js"></script>
   <script type="text/javascript" src="../../blocks/procedures.js"></script>
   <script type="text/javascript" src="../../blocks/factory.js"></script>
-  <script type="text/javascript" src="../../blocks/company/geekinsect.js"></script>
-  <script type="text/javascript" src="../../generators/arduino/company/geekinsect.js"></script>
+  <script type="text/javascript" src="../../blocks/geekinsect.js"></script>
+  <script type="text/javascript" src="../../generators/arduino/geekinsect.js"></script>
   <link rel="stylesheet" type="text/css" href="color.css" />
   <script>
 var sidecodeDisplay=false;
@@ -285,7 +285,7 @@ function init() {
         <input onclick="location.reload();" name="undo" type="image" title="refresh(F5)"  src="media/refresh.png" style="padding:5px;" onmouseover="this.src='media/refresh.png'" onmousedown="this.src='media/refresh.png'" onmouseup="this.src='media/refresh.png'" onmouseout="this.src='media/refresh.png'" width="20" height="20" border="0">
             </td>
 			<td class="tabmin">
-			  <input onclick="location.reload();" name="undo" type="image" title="undo(ctrl+z)"  src="media/download.png" style="padding:5px;" onmouseover="this.src='media/download1.png'" onmousedown="this.src='media/download2.png'" onmouseup="this.src='media/download1.png'" onmouseout="this.src='media/download.png'" width="20" height="20" border="0">
+			  <input onclick="Code.initSerail();" name="undo" type="image" title="undo(ctrl+z)"  src="media/download.png" style="padding:5px;" onmouseover="this.src='media/download1.png'" onmousedown="this.src='media/download2.png'" onmouseup="this.src='media/download1.png'" onmouseout="this.src='media/download.png'" width="20" height="20" border="0">
             </td>
       <td class="tabmin">
         <input onclick="Blockly.mainWorkspace.undo(0);" name="undo" type="image" title="undo(ctrl+z)"  src="media/undo.png" style="padding:5px;" onmouseover="this.src='media/undo1.png'" onmousedown="this.src='media/undo2.png'" onmouseup="this.src='media/undo1.png'" onmouseout="this.src='media/undo.png'" width="20" height="20" border="0">
@@ -1254,6 +1254,26 @@ function init() {
       </value>
      </block>
      <block type="geekinsect_xeopixel"></block>
+     <block type="geekinsect_beep"></block>
+     <value name="PORT">
+      <shadow type="math_number">
+       <field name="NUM">80</field>
+      </shadow>
+     </value>
+     <block type="geekinsect_readir"></block>
+     <value name="PORT">
+      <shadow type="math_number">
+       <field name="NUM">80</field>
+      </shadow>
+     </value>
+     <block type="geekinsect_algo"></block>
+     <block type="geekinsect_sendir">
+      <value name="VALUE1">
+       <shadow type="math_number">
+        <field name="NUM">80</field></shadow>
+      </value>
+     </block>
+    </category>
   </xml>
   <script>
 	if(company_block!=null){
