修改了版权信息

--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -283,7 +283,7 @@ function init() {
         </select>
       </td>
       <td class="tabmin">
-        <input onclick="location.reload();" name="undo" type="image" title="refresh(F5)"  src="media/refresh.png" style="padding:5px;" onmouseover="this.src='media/refresh.png'" onmousedown="this.src='media/refresh.png'" onmouseup="this.src='media/refresh.png'" onmouseout="this.src='media/refresh.png'" width="20" height="20" border="0">
+        <input onclick="location.reload();" name="undo" type="image" title="refresh(F5)"  src="media/refresh.png" style="padding:5px;" onmouseover="this.src='media/refresh1.png'" onmousedown="this.src='media/refresh2.png'" onmouseup="this.src='media/refresh1.png'" onmouseout="this.src='media/refresh.png'" width="20" height="20" border="0">
             </td>
 			<td class="tabmin">
 			  <input onclick="Serial.downLoad();" name="undo" type="image" title="undo(ctrl+z)"  src="media/download.png" style="padding:5px;" onmouseover="this.src='media/download1.png'" onmousedown="this.src='media/download2.png'" onmouseup="this.src='media/download1.png'" onmouseout="this.src='media/download.png'" width="20" height="20" border="0">
