--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="drag.js"></script>
   <script type="text/javascript" src="code.js"></script> 
   <script type="text/javascript" src="serial.js"></script> 
+  <script type="text/javascript" src="debug.js"></script> 
   <script type="text/javascript" src="digitalPinToInterrupt.js"></script>
   <!--------from BlocklyDuino------------>
   <script type="text/javascript" src="Blob.js"></script>
