--- a/apps/gide/index.html
+++ b/apps/gide/index.html
@@ -52,12 +52,12 @@
   <script type="text/javascript" src="../../generators/arduino/geekinsect.js"></script>
   <link rel="stylesheet" type="text/css" href="color.css" />
   <script>
-var sidecodeDisplay=false;
+ 
+var sidecodeDisplay=window.sessionStorage.getItem("sidecodeDisplay");
 /**
  * 点击侧边显示代码按钮
- */
+ */ 
 function sidecodeClick(){
-  Debug("sidecodeClick");
   if(sidecodeDisplay){
 	document.getElementById('side_code_parent').style.display = 'none';
 	document.getElementById('sidebar').className='right-top';
@@ -70,6 +70,7 @@ function sidecodeClick(){
 	sidecodeDisplay=true;
   }
   Blockly.fireUiEvent(window, 'resize');
+  window.sessionStorage.setItem("sidecodeDisplay", sidecodeDisplay);
 }
 /**
  * List of tab names.
